--- a/tutorial/app.yaml
+++ b/tutorial/app.yaml
@@ -4,18 +4,9 @@ runtime: python27
 api_version: 1
 threadsafe: yes
 
-#[START env]
-env_variables:
-    PUBSUB_TOPIC: topic1
-    # This token is used to verify that requests originate from your
-    # application. It can be any sufficiently random string.
-    PUBSUB_VERIFICATION_TOKEN: 3797
-#[END env]
-
 handlers:
-- url: /favicon\.ico
-  static_files: favicon.ico
-  upload: favicon\.ico
+- url: /_ah/push-handlers/.*
+  script: main.APPLICATION
 
 - url: /images
   static_dir: images
