--- a/tutorial/app.yaml
+++ b/tutorial/app.yaml
@@ -13,7 +13,10 @@ handlers:
   static_dir: images
 
 - url: /stylesheets
-  static_dir: /stylesheets
+  static_dir: stylesheets
+
+- url: /static
+  static_dir: static
 
 - url: .*
   script: main.app
